# tandem-fetch

./: .env.template  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  alembic.ini  pyproject.toml  test_imports.py
.claude/: settings.local.json
.github/scripts/: run-ci-locally.sh
.github/workflows/: ci.yml
.specify/memory/: constitution.md
alembic/: env.py
alembic/versions/: 2812fe42cc59_initial_duckdb_schema.py  313d25f83643_make_raw_event_id_unique.py  3a2d93882826_add_cgm_readings.py  3a84baaba9eb_create_raw_events_table.py  3fce426fc97b_make_event_id_unique.py  5924b00ecfbd_create_tables.py  6599b987feaa_add_cgm_readings.py  7642c2329677_make_event_id_nonunique.py  7b855b9a406c_add_basal_deliveries.py  8aeac559a9e7_create_events_table.py
docs/: pre-commit-hooks.md
sensitive/: credentials.template.toml
specs/001-duckdb-migration/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-duckdb-migration/checklists/: requirements.md
specs/001-duckdb-migration/contracts/: cli-interface.md
specs/002-precommit-hooks/: plan.md  research.md  spec.md  tasks.md
specs/002-precommit-hooks/checklists/: requirements.md
specs/002-precommit-hooks/contracts/: pre-commit-config-schema.yaml
specs/003-integration-tests/: plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-integration-tests/checklists/: requirements.md
specs/003-integration-tests/contracts/: api-response-schema.yaml
specs/004-github-actions-ci/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-github-actions-ci/checklists/: requirements.md
specs/004-github-actions-ci/contracts/: ci-workflow-schema.yml
specs/005-tandem-data-export/: data-model.md  plan.md  quickstart.md  spec.md  tasks.md
specs/005-tandem-data-export/checklists/: requirements.md
specs/005-tandem-data-export/contracts/: cli-interface.md
specs/005-tandem-data-export/research/: CLI_DECISION_TREE.md  CLI_FRAMEWORK_RESEARCH.md  CLI_IMPLEMENTATION_GUIDE.md  CLI_QUICK_REFERENCE.md  CLI_RESEARCH_INDEX.md  CLI_RESEARCH_SUMMARY.md  README_CLI_RESEARCH.md  technical-decisions.md
specs/006-db-connection-helpers/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-db-connection-helpers/checklists/: requirements.md
specs/006-db-connection-helpers/contracts/: api.md
specs/007-mcp-server/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/007-mcp-server/checklists/: requirements.md
specs/007-mcp-server/contracts/: tools.md
specs/008-continuous-fetch/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/008-continuous-fetch/checklists/: requirements.md
specs/008-continuous-fetch/contracts/: cli.md
specs/009-ci-security-scanning/: plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/009-ci-security-scanning/checklists/: requirements.md
specs/009-ci-security-scanning/contracts/: ci.md
src/tandem_fetch/: __init__.py  credentials.py  definitions.py  tsource.py
src/tandem_fetch/db/: __init__.py  basal_deliveries.py  cgm_readings.py  connect.py  events.py  raw_events.py
src/tandem_fetch/events/: __init__.py  build_events.py  generic.py
src/tandem_fetch/mcp/: server.py
src/tandem_fetch/pump_events/: build_events.py  events.py  events_old.py  generic.py  raw_event.py  static_dicts.py  transforms.py  utils.py
src/tandem_fetch/tasks/: auth.py  export.py  fetch.py  raw_events.py
src/tandem_fetch/workflows/: continuous_fetch.py  export_data.py  get_all_raw_pump_events.py
tests/: conftest.py
tests/fixtures/api_responses/: auth_success.json  basal_events.json  cgm_events.json  pump_events_sample.json
tests/fixtures/expected/: basal_deliveries.json  cgm_readings.json  full_pipeline_basal.json  full_pipeline_cgm.json  parsed_events.json
tests/integration/: conftest.py
tests/integration/test_workflows/: test_export_data.py  test_full_pipeline.py  test_step0_fetch_raw_events.py  test_step1_parse_events.py  test_step2_extract_cgm.py  test_step3_extract_basal.py
tests/unit/: conftest.py
(+19 files in other folders)
