[project]
name = "tandem-fetch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Oskari Timgren", email = "oskari.timgren@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.5",
    "arrow>=1.3.0",
    "cryptography>=44.0.0",
    "dotenv>=0.9.9",
    "duckdb>=1.0.0",
    "duckdb-engine>=0.17.0",
    "loguru>=0.7.3",
    "polars>=1.33.0",
    "prefect>=3.4.17",
    "pyjwt>=2.10.1",
    "requests>=2.32.3",
    "sqlalchemy>=2.0.43",
]

[project.scripts]
tandem-fetch = "tandem_fetch:main"
get-all-raw-pump-events = "tandem_fetch.workflows.backfills.step0_get_all_raw_pump_events:get_all_raw_pump_events_flow"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipython>=9.5.0",
]
