[project]
name = "tandem-fetch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Oskari Timgren", email = "oskari.timgren@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.5",
    "arrow>=1.3.0",
    "cryptography>=44.0.0",
    "dotenv>=0.9.9",
    "duckdb>=1.0.0",
    "duckdb-engine>=0.17.0",
    "loguru>=0.7.3",
    "polars>=1.33.0",
    "prefect>=3.4.17",
    "pyjwt>=2.10.1",
    "requests>=2.32.3",
    "sqlalchemy>=2.0.43",
]

[project.scripts]
tandem-fetch = "tandem_fetch:main"
run-pipeline = "tandem_fetch.workflows.backfills.run_full_pipeline:run_full_pipeline"
get-all-raw-pump-events = "tandem_fetch.workflows.backfills.step0_get_all_raw_pump_events:get_all_raw_pump_events_flow"
parse-events = "tandem_fetch.workflows.backfills.step1_parse_events_table:parse_raw_events_flow"
parse-cgm-readings = "tandem_fetch.workflows.backfills.step2_parse_cgm_readings:populate_cgm_readings_flow"
parse-basal-deliveries = "tandem_fetch.workflows.backfills.step3_parse_basal_deliveries:populate_basal_deliveries_flow"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipython>=9.5.0",
]
